--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     left: 0;
     top: 0;
-    z-index: 10;
+    z-index: 100;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
 }
