--- a/frontend/src/styles/Section.css
+++ b/frontend/src/styles/Section.css
@@ -1,53 +1,107 @@
-  .section {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden !important;
-    overflow-y: hidden !important; 
-    padding: 0;
-    margin: 0;
-  }
+.section {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden !important;
+  overflow-y: hidden !important; 
+  padding: 0;
+  margin: 0;
+}
 
-  .section .header {
-    position: absolute;
-    top: 0;
-    left:0;
-    width: 100%;
-    height: 200px;
-    z-index: 0;
-    background-color: transparent;
-  }
+.section .header {
+  position: absolute;
+  top: 0;
+  left:0;
+  width: 100%;
+  height: 200px;
+  z-index: 0;
+  background-color: transparent;
+}
 
-  .section .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 200px;
-    z-index: 0;
-    background-color: transparent;
+.section .footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  z-index: 0;
+  background-color: transparent;
+}
+
+.section .text-content {
+  position: relative;
+  z-index: 10;
+  margin-top: 8em;
+}
+
+.section .text-content {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.section .text-content h2, 
+.section .text-content p {
+  font-weight: lighter;
+}
+
+.section .text-content h2 {
+  color: white;
+  margin-bottom: 0.2em;
+}
+
+.section .text-content p {
+  color: black;
+  margin-top: 0;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+@media screen and (min-width: 501px) {
+  .section .text-content {
+    margin: 0 auto;
+    width: 500px;
   }
+}
+
+@media screen and (max-width: 500px) {
 
   .section .text-content {
-    position: relative;
-    z-index: 1;
-    margin-top: 8em;
+    margin-top: 2em;
+    text-align: center;
   }
 
-  @keyframes MOVE-CLOUDS {
-    from {
-        background-position: 0px top;
-    }
-    to { 
-        background-position: -400px top;
-    }
+  .section .text-content h2, 
+  .section .text-content p {
+    font-weight: lighter;
+  }
+  
+  .section .text-content h2 {
+    color: white;
+    margin-bottom: 0.2em;
   }
 
-  @keyframes MOVE-CLOUDS-2 {
-    from {
-        background-position: 0px top;
-    }
-    to { 
-        background-position: -300px top;
-    }
+  .section .text-content p {
+    color: black;
+    margin-top: 0;
+    margin-left: 1em;
+    margin-right: 1em;
   }
+}
+
+@keyframes MOVE-CLOUDS {
+  from {
+      background-position: 0px top;
+  }
+  to { 
+      background-position: -400px top;
+  }
+}
+
+@keyframes MOVE-CLOUDS-2 {
+  from {
+      background-position: 0px top;
+  }
+  to { 
+      background-position: -300px top;
+  }
+}
