--- a/frontend/src/styles/Section1.css
+++ b/frontend/src/styles/Section1.css
@@ -49,7 +49,7 @@
 @media screen and (min-width: 501px) {
 
   .section1 .text-content {
-    margin-top: 25em;
+    margin-top: 27em;
   }
 
   #mobile-btn-create-account {
