--- a/frontend/src/styles/Section2.css
+++ b/frontend/src/styles/Section2.css
@@ -23,19 +23,18 @@
 }
 
 @media screen and (min-width: 501px) {
-  
+  .section2 .text-content {
+    margin-top: 5em;
+  }
   .section2 .clouds{
-  top: 45%;
-  height: 400px;
+    top: 45%;
+    height: 400px;
   }
 }
 
 @media screen and (max-width: 500px) {
-
-
   .section2 .clouds {
     top: 50%;
     height: 250px;
   }
-
 }
