--- a/frontend/src/styles/Section4.css
+++ b/frontend/src/styles/Section4.css
@@ -26,7 +26,8 @@
 #euLogo,
 #lulLogo,
 #sunlabsLogo {
-  z-index: 0;
+  position: relative;
+  z-index: 1;
   display: block;
   width: 100%;
   background-position: center center;
